fixed alignment of elements in labeling page

--- a/src/routes/labeling/index.css
+++ b/src/routes/labeling/index.css
@@ -39,3 +39,8 @@
   right: '1rem';
   border-radius: '50%';
 }
+
+.text-break {
+  word-break: break-all;
+  overflow-wrap: break-word;
+}
